# super-lite-status-bar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-macos-dmg.yml  release.yml
docs/: DEVELOPMENT_PROGRESS.md  MAINTAINING.md  RELEASE.md
scripts/: generate-icons.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/core/: autostart.rs  config.rs  gpu.rs  identity.rs  logger.rs  mod.rs  network_speed.rs  system_metrics.rs
src-tauri/src/ui/: floating_bar.rs  mod.rs  tray.rs  windows.rs
tests/: README.md
ui/: index.html  main.js  styles.css
ui/components/: format.js  state.js
ui/floating_bar/: floating.js
ui/settings/: settings.js
ui/tray/: tooltip.js
